--- a/index.html
+++ b/index.html
@@ -10,7 +10,29 @@
     <div class="container">
       <h1>Minhas Tarefas</h1>
 
-      <div class="task-form">
+      <div id="taskOptionContainer" style="margin-bottom: 20px">
+        <label>
+          <input
+            type="radio"
+            id="newTaskOption"
+            name="taskType"
+            value="newTask"
+            checked
+          />
+          Digitar Nova Tarefa
+        </label>
+        <label style="margin-left: 20px">
+          <input
+            type="radio"
+            id="createShoppingListOption"
+            name="taskType"
+            value="shoppingList"
+          />
+          Criar Lista de Compras
+        </label>
+      </div>
+
+      <div class="task-form" id="addTaskForm">
         <input
           type="text"
           id="taskTitle"
@@ -21,13 +43,35 @@
           id="taskDescription"
           placeholder="Descrição (opcional)"
         ></textarea>
-        <select id="taskStatus">
+      </div>
+
+      <div id="shoppingListContainer" style="display: none">
+        <label>Selecione os itens para a lista de compras:</label>
+        <div id="shoppingListCheckboxes" class="checkbox-list"></div>
+      </div>
+
+      <fieldset>
+        <legenda>Selecione o status da tarefa:</legenda>
+        <select
+          id="taskStatus"
+          style="
+            width: 100%;
+            padding: 15px;
+            border: 2px solid #ddd;
+            border-radius: 4px;
+            font-size: 20px;
+            color: blue;
+            font-style: bold;
+            margin-bottom: 10px;
+            box-shadow: rgb(13, 13, 13) 4px 4px 5px; /* Sombra para o botão */
+          "
+        >
           <option value="pendente">Pendente</option>
           <option value="em progresso">Em Progresso</option>
           <option value="concluída">Concluída</option>
         </select>
         <button id="addTaskBtn">Adicionar Tarefa</button>
-      </div>
+      </fieldset>
 
       <div class="tasks-list">
         <h2>Lista de Tarefas</h2>
